--- a/app/src/main/res/layout/seller_user_management_tab_activity.xml
+++ b/app/src/main/res/layout/seller_user_management_tab_activity.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
+    <include layout="@layout/seller_user_management_titlebar"></include>
 
     <TabHost
         android:id="@android:id/tabhost"
@@ -30,4 +33,4 @@
                 android:layout_height="wrap_content"></TabWidget>
         </LinearLayout>
     </TabHost>
-</RelativeLayout>
+</LinearLayout>
