--- a/app/src/main/res/layout/seller_user_management_titlebar.xml
+++ b/app/src/main/res/layout/seller_user_management_titlebar.xml
@@ -7,12 +7,13 @@
 
     <TextView
         android:id="@+id/txt_admin_management"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:gravity="center_horizontal|center"
+        android:gravity="center_vertical|left"
         android:singleLine="true"
         android:text="@string/activity_seller_user_management_titlebar_admin_management"
         android:textColor="@android:color/holo_orange_light"
+        android:layout_marginLeft="15dp"
         android:textSize="20dp" />
 
     <Button
