--- a/app/src/main/res/layout/seller_login_activity.xml
+++ b/app/src/main/res/layout/seller_login_activity.xml
@@ -12,6 +12,7 @@
         android:layout_marginRight="5dp"
         android:layout_marginTop="10dp"
         android:hint="@string/activity_seller_login_seller_name"
+        android:singleLine="true"
         android:textAlignment="center"
         android:textSize="40dp" />
 
@@ -25,6 +26,7 @@
         android:layout_marginTop="10dp"
         android:hint="@string/activity_seller_login_seller_password"
         android:inputType="textPassword"
+        android:singleLine="true"
         android:textAlignment="center"
         android:textSize="40dp" />
 
