--- a/app/src/main/res/layout/goods_management_activity.xml
+++ b/app/src/main/res/layout/goods_management_activity.xml
@@ -1,8 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin">
+
+    <ListView
+        android:id="@+id/lv_goods_management_goods"
+        android:layout_width="match_parent"
+        android:layout_height="440dp"></ListView>
+
+    <Button
+        android:id="@+id/btn_goods_management_add_goods"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_marginLeft="25dp"
+        android:layout_marginRight="25dp"
+        android:layout_marginTop="5dp"
+        android:background="@android:color/holo_orange_dark"
+        android:text="@string/activity_goods_management_add_goods"
+        android:textSize="20dp" />
 
 </LinearLayout>
