--- a/app/src/main/res/layout/goods_info_modify_activity.xml
+++ b/app/src/main/res/layout/goods_info_modify_activity.xml
@@ -71,10 +71,32 @@
         android:gravity="center_vertical" />
 
     <TextView
-        android:id="@+id/txt_goods_info_modify_goods_brief_description"
+        android:id="@+id/txt_goods_info_modify_goods_kind"
         android:layout_width="100dp"
         android:layout_height="65dp"
         android:layout_below="@id/txt_goods_info_modify_goods_price"
+        android:layout_marginTop="5dp"
+        android:gravity="center_vertical"
+        android:text="@string/activity_goods_info_modify_goods_kind"
+        android:textSize="20dp" />
+
+    <EditText
+        android:id="@+id/edt_goods_info_modify_goods_kind"
+        android:layout_width="wrap_content"
+        android:layout_height="65dp"
+        android:layout_alignBottom="@id/txt_goods_info_modify_goods_kind"
+        android:layout_alignParentRight="true"
+        android:layout_below="@id/edt_goods_info_modify_goods_price"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="5dp"
+        android:layout_toRightOf="@id/txt_goods_info_modify_goods_kind"
+        android:gravity="center_vertical" />
+
+    <TextView
+        android:id="@+id/txt_goods_info_modify_goods_brief_description"
+        android:layout_width="100dp"
+        android:layout_height="65dp"
+        android:layout_below="@id/txt_goods_info_modify_goods_kind"
         android:layout_marginTop="5dp"
         android:gravity="center_vertical"
         android:text="@string/activity_goods_info_modify_goods_brief_description"
@@ -86,16 +108,16 @@
         android:layout_height="65dp"
         android:layout_alignBottom="@id/txt_goods_info_modify_goods_brief_description"
         android:layout_alignParentRight="true"
-        android:layout_below="@id/edt_goods_info_modify_goods_price"
+        android:layout_below="@id/edt_goods_info_modify_goods_kind"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="5dp"
         android:layout_toRightOf="@id/txt_goods_info_modify_goods_brief_description"
-        android:gravity="start" />
+        android:gravity="center_vertical" />
 
     <TextView
         android:id="@+id/txt_goods_info_modify_goods_description"
         android:layout_width="100dp"
-        android:layout_height="130dp"
+        android:layout_height="95dp"
         android:layout_below="@id/txt_goods_info_modify_goods_brief_description"
         android:layout_marginTop="5dp"
         android:gravity="center_vertical"
@@ -105,7 +127,7 @@
     <EditText
         android:id="@+id/edt_goods_info_modify_goods_description"
         android:layout_width="wrap_content"
-        android:layout_height="130dp"
+        android:layout_height="95dp"
         android:layout_alignBottom="@id/txt_goods_add_goods_description"
         android:layout_alignParentRight="true"
         android:layout_below="@id/edt_goods_info_modify_goods_brief_description"
@@ -117,7 +139,7 @@
     <TextView
         android:id="@+id/txt_goods_info_modify_goods_images"
         android:layout_width="100dp"
-        android:layout_height="130dp"
+        android:layout_height="95dp"
         android:layout_below="@id/txt_goods_info_modify_goods_description"
         android:layout_marginTop="5dp"
         android:gravity="center_vertical"
