--- a/app/src/main/res/layout/users_listitem.xml
+++ b/app/src/main/res/layout/users_listitem.xml
@@ -18,7 +18,7 @@
 
     <TextView
         android:id="@+id/txt_users_listitem_username"
-        android:layout_width="65dp"
+        android:layout_width="90dp"
         android:layout_height="50dp"
         android:layout_weight="1"
         android:paddingLeft="5dp"
@@ -33,6 +33,16 @@
         android:paddingLeft="5dp"
         android:textAlignment="center"
         android:textSize="25dp" />
+
+    <TextView
+        android:id="@+id/txt_users_listitem_isvip"
+        android:layout_width="65dp"
+        android:layout_height="50dp"
+        android:layout_weight="1"
+        android:paddingLeft="5dp"
+        android:textAlignment="center"
+        android:textSize="25dp" />
+
 
     <TextView
         android:id="@+id/txt_users_listitem_userstatus"
