--- a/app/src/main/res/layout/user_goods_activity.xml
+++ b/app/src/main/res/layout/user_goods_activity.xml
@@ -3,6 +3,34 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_weight="3"
+            android:gravity="center"
+            android:text="@string/activity_user_goods_goods_kind"
+            android:textSize="30dp" />
+
+        <Spinner
+            android:id="@+id/spinner_user_goods_kind"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_weight="1"></Spinner>
+    </LinearLayout>
+
+    <ListView
+        android:id="@+id/lv_user_goods_goods"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"></ListView>
 
 </LinearLayout>
