--- a/app/src/main/res/layout/goods_details_activity.xml
+++ b/app/src/main/res/layout/goods_details_activity.xml
@@ -1,8 +1,85 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin">
 
-</LinearLayout>
+    <ImageView
+        android:id="@+id/img_goods_details_goods_image"
+        android:layout_width="120dp"
+        android:layout_height="120dp" />
+
+    <TextView
+        android:id="@+id/txt_goods_details_goods_name"
+        android:layout_width="match_parent"
+        android:layout_height="35dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginTop="5dp"
+        android:layout_toRightOf="@id/img_goods_details_goods_image"
+        android:textSize="20dp" />
+
+    <TextView
+        android:id="@+id/txt_goods_details_goods_price"
+        android:layout_width="match_parent"
+        android:layout_height="35dp"
+        android:layout_below="@id/txt_goods_details_goods_name"
+        android:layout_marginLeft="5dp"
+        android:layout_marginTop="5dp"
+        android:layout_toRightOf="@id/img_goods_details_goods_image"
+        android:textSize="20dp" />
+
+    <TextView
+        android:id="@+id/txt_goods_details_goods_amounts"
+        android:layout_width="match_parent"
+        android:layout_height="35dp"
+        android:layout_below="@id/txt_goods_details_goods_price"
+        android:layout_marginLeft="5dp"
+        android:layout_marginTop="5dp"
+        android:layout_toRightOf="@id/img_goods_details_goods_image"
+        android:textSize="20dp" />
+
+    <TextView
+        android:id="@+id/txt_goods_details_goods_description"
+        android:layout_width="match_parent"
+        android:layout_height="400dp"
+        android:layout_below="@id/img_goods_details_goods_image"
+        android:layout_marginTop="10dp" />
+
+    <TextView
+        android:id="@+id/txt_goods_details_amounts"
+        android:layout_width="100dp"
+        android:layout_height="35dp"
+        android:layout_alignParentBottom="true"
+        android:layout_below="@id/txt_goods_details_goods_description"
+        android:text="@string/activity_goods_details_goods_amounts"
+        android:textSize="20dp" />
+
+    <EditText
+        android:id="@+id/edt_goods_details_goods_amounts"
+        android:layout_width="100dp"
+        android:layout_height="35dp"
+        android:layout_alignParentBottom="true"
+        android:layout_below="@id/txt_goods_details_goods_description"
+        android:layout_toRightOf="@id/txt_goods_details_amounts"
+        android:gravity="center"
+        android:textSize="20dp" />
+
+    <Button
+        android:id="@+id/btn_goods_details_add_shopping_cart"
+        android:layout_width="fill_parent"
+        android:layout_height="35dp"
+        android:layout_alignParentBottom="true"
+        android:layout_below="@id/txt_goods_details_goods_description"
+        android:layout_marginBottom="10dp"
+        android:layout_marginLeft="5dp"
+        android:layout_toRightOf="@id/edt_goods_details_goods_amounts"
+        android:background="@android:color/holo_orange_dark"
+        android:text="@string/activity_goods_details_add_shopping_cart"
+        android:textSize="20dp" />
+
+
+</RelativeLayout>
