--- a/app/src/main/res/layout/user_tab_activity.xml
+++ b/app/src/main/res/layout/user_tab_activity.xml
@@ -5,6 +5,8 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <include layout="@layout/user_titlebr"></include>
+
     <TabHost
         android:id="@android:id/tabhost"
         android:layout_width="match_parent"
