--- a/app/src/main/res/layout/activity_user_submit_order.xml
+++ b/app/src/main/res/layout/activity_user_submit_order.xml
@@ -1,8 +1,209 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin">
 
-</LinearLayout>
+    <TextView
+        android:id="@+id/txt_submit_order_address"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:gravity="center_vertical"
+        android:text="@string/activity_submit_order_address"
+        android:textSize="20dp" />
+
+    <TextView
+        android:id="@+id/txt_submit_order_user_name"
+        android:layout_width="100dp"
+        android:layout_height="40dp"
+        android:layout_below="@id/txt_submit_order_address"
+        android:layout_marginTop="20dp"
+        android:textSize="20dp" />
+
+    <TextView
+        android:id="@+id/txt_submit_order_user_phone"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_below="@id/txt_submit_order_address"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="20dp"
+        android:layout_toRightOf="@id/txt_submit_order_user_name"
+        android:gravity="center_vertical"
+        android:textSize="20dp" />
+
+    <TextView
+        android:id="@+id/txt_submit_order_user_address"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_below="@id/txt_submit_order_user_phone"
+        android:layout_marginTop="10dp"
+        android:gravity="center_vertical"
+        android:textSize="16dp" />
+
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/rly_goods_info"
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
+        android:layout_below="@id/txt_submit_order_user_address"
+        android:layout_marginTop="20dp"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/img_submit_order_goods_image"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:src="@drawable/goods" />
+
+        <TextView
+            android:id="@+id/txt_submit_order_goods_name"
+            android:layout_width="fill_parent"
+            android:layout_height="40dp"
+            android:layout_alignTop="@id/img_submit_order_goods_image"
+            android:layout_marginLeft="10dp"
+            android:layout_toRightOf="@id/img_submit_order_goods_image"
+            android:textSize="20dp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/txt_submit_order_goods_price"
+            android:layout_width="150dp"
+            android:layout_height="30dp"
+            android:layout_below="@id/txt_submit_order_goods_name"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="5dp"
+            android:layout_toRightOf="@id/img_submit_order_goods_image"
+            android:textSize="17dp" />
+
+        <TextView
+            android:id="@+id/txt_submit_order_amounts"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_alignBottom="@id/txt_submit_order_goods_price"
+            android:layout_alignParentRight="true"
+            android:layout_below="@id/txt_submit_order_goods_name"
+            android:layout_marginLeft="5dp"
+            android:layout_marginTop="5dp"
+            android:layout_toRightOf="@id/txt_submit_order_goods_price"
+            android:textSize="17dp" />
+    </RelativeLayout>
+
+    <TextView
+        android:id="@+id/txt_submit_order_account1"
+        android:layout_width="150dp"
+        android:layout_height="40dp"
+        android:layout_below="@id/rly_goods_info"
+        android:layout_marginTop="20dp"
+        android:gravity="center_vertical"
+        android:text="@string/activity_submit_order_account"
+        android:textSize="20dp" />
+
+    <TextView
+        android:id="@+id/txt_submit_order_account"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_below="@id/rly_goods_info"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="20dp"
+        android:layout_toRightOf="@id/txt_submit_order_account1"
+        android:gravity="center"
+        android:textSize="20dp" />
+
+    <TextView
+        android:id="@+id/txt_submit_order_vip_discount1"
+        android:layout_width="150dp"
+        android:layout_height="40dp"
+        android:layout_below="@id/txt_submit_order_account1"
+        android:layout_marginTop="10dp"
+        android:gravity="center_vertical"
+        android:text="@string/activity_submit_order_vip_discount"
+        android:textSize="20dp" />
+
+    <TextView
+        android:id="@+id/txt_submit_order_discount"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_below="@id/txt_submit_order_account"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_toRightOf="@id/txt_submit_order_vip_discount1"
+        android:gravity="center"
+        android:textSize="20dp" />
+
+    <TextView
+        android:id="@+id/txt_submit_order_freight1"
+        android:layout_width="150dp"
+        android:layout_height="40dp"
+        android:layout_below="@id/txt_submit_order_vip_discount1"
+        android:layout_marginTop="10dp"
+        android:gravity="center_vertical"
+        android:text="@string/activity_submit_order_freight"
+        android:textSize="20dp" />
+
+    <TextView
+        android:id="@+id/txt_submit_order_freight"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_below="@id/txt_submit_order_discount"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_toRightOf="@id/txt_submit_order_freight1"
+        android:gravity="center"
+        android:textSize="20dp" />
+
+    <TextView
+        android:id="@+id/txt_submit_order_discount_account1"
+        android:layout_width="150dp"
+        android:layout_height="40dp"
+        android:layout_below="@id/txt_submit_order_freight1"
+        android:layout_marginTop="10dp"
+        android:gravity="center_vertical"
+        android:text="@string/activity_submit_order_discount_account"
+        android:textSize="20dp" />
+
+    <TextView
+        android:id="@+id/txt_submit_order_discount_account"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_below="@id/txt_submit_order_freight"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_toRightOf="@id/txt_submit_order_discount_account1"
+        android:gravity="center"
+        android:textSize="20dp" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_below="@id/txt_submit_order_discount_account"
+        android:layout_marginTop="30dp"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/btn_cancel_order"
+            android:layout_width="match_parent"
+            android:layout_height="45dp"
+            android:layout_marginRight="5dp"
+            android:layout_weight="1"
+            android:background="@android:color/holo_orange_dark"
+            android:gravity="center"
+            android:text="@string/activity_submit_order_cancel"
+            android:textSize="20dp" />
+
+        <Button
+            android:id="@+id/btn_submit_order"
+            android:layout_width="match_parent"
+            android:layout_height="45dp"
+            android:layout_marginLeft="5dp"
+            android:layout_weight="1"
+            android:background="@android:color/holo_orange_dark"
+            android:gravity="center"
+            android:text="@string/activity_submit_order_submit"
+            android:textSize="20dp" />
+
+    </LinearLayout>
+
+</RelativeLayout>
