--- a/app/src/main/res/layout/goods_details_activity.xml
+++ b/app/src/main/res/layout/goods_details_activity.xml
@@ -47,7 +47,8 @@
         android:layout_width="match_parent"
         android:layout_height="400dp"
         android:layout_below="@id/img_goods_details_goods_image"
-        android:layout_marginTop="10dp" />
+        android:layout_marginTop="10dp"
+        android:textSize="20dp" />
 
     <TextView
         android:id="@+id/txt_goods_details_amounts"
