--- a/app/src/main/res/layout/activity_user_submit_order.xml
+++ b/app/src/main/res/layout/activity_user_submit_order.xml
@@ -22,6 +22,7 @@
         android:layout_height="40dp"
         android:layout_below="@id/txt_submit_order_address"
         android:layout_marginTop="20dp"
+        android:gravity="center_vertical"
         android:textSize="20dp" />
 
     <TextView
