--- a/app/src/main/res/layout/activity_my_order_management.xml
+++ b/app/src/main/res/layout/activity_my_order_management.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -8,4 +8,29 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin">
 
-</RelativeLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_weight="3"
+            android:gravity="center"
+            android:text="@string/activity_my_order_management_order_status"
+            android:textSize="15dp" />
+
+        <Spinner
+            android:id="@+id/spinner_my_order_management_order_status"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_weight="1"></Spinner>
+    </LinearLayout>
+
+    <ListView
+        android:id="@+id/lv_my_order_management_my_orders"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"></ListView>
+
+</LinearLayout>
