--- a/app/src/main/res/layout/user_goods_activity.xml
+++ b/app/src/main/res/layout/user_goods_activity.xml
@@ -5,8 +5,14 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin">
+    android:paddingRight="@dimen/activity_horizontal_margin">
+
+    <EditText
+        android:id="@+id/edt_user_goods_goods_search"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:hint="@string/activity_user_goods_goods_search"
+        android:textSize="16dp" />
 
     <LinearLayout
         android:layout_width="match_parent"
