--- a/app/src/main/res/layout/my_order_management_activity.xml
+++ b/app/src/main/res/layout/my_order_management_activity.xml
@@ -8,6 +8,13 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin">
 
+    <EditText
+        android:id="@+id/edt_user_goods_goods_search"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:hint="@string/activity_my_order_management_order_search"
+        android:textSize="16dp" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
