--- a/app/src/main/res/layout/seller_login_activity.xml
+++ b/app/src/main/res/layout/seller_login_activity.xml
@@ -35,9 +35,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/edt_seller_password"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginLeft="45dp"
+        android:layout_marginRight="45dp"
+        android:layout_marginTop="30dp"
+        android:background="@android:color/holo_orange_dark"
         android:text="@string/activity_seller_login_login"
         android:textAlignment="center"
         android:textSize="40dp" />
