--- a/app/src/main/res/layout/user_shopping_cart_activity.xml
+++ b/app/src/main/res/layout/user_shopping_cart_activity.xml
@@ -18,10 +18,11 @@
     <TextView
         android:id="@+id/txt_shopping_cart_total"
         android:layout_width="200dp"
-        android:layout_height="35dp"
+        android:layout_height="45dp"
         android:layout_alignParentBottom="true"
+        android:layout_marginBottom="5dp"
         android:layout_below="@id/lv_shopping_cart"
-        android:gravity="center_vertical"
+        android:gravity="center|left"
         android:text="@string/activity_shopping_cart_total"
         android:textSize="20dp" />
 
@@ -29,7 +30,7 @@
     <Button
         android:id="@+id/btn_settle_accounts"
         android:layout_width="match_parent"
-        android:layout_height="35dp"
+        android:layout_height="45dp"
         android:layout_alignParentBottom="true"
         android:layout_below="@id/lv_shopping_cart"
         android:layout_marginBottom="10dp"
