--- a/app/src/main/res/layout/goods_add_activity.xml
+++ b/app/src/main/res/layout/goods_add_activity.xml
@@ -24,7 +24,8 @@
         android:layout_alignParentRight="true"
         android:layout_marginLeft="10dp"
         android:layout_toRightOf="@id/txt_goods_add_goods_name"
-        android:gravity="center_vertical" />
+        android:gravity="center_vertical"
+        android:singleLine="true" />
 
     <TextView
         android:id="@+id/txt_goods_add_goods_amounts"
@@ -46,7 +47,8 @@
         android:layout_marginLeft="10dp"
         android:layout_marginTop="5dp"
         android:layout_toRightOf="@id/txt_goods_add_goods_amounts"
-        android:gravity="center_vertical" />
+        android:gravity="center_vertical"
+        android:singleLine="true" />
 
     <TextView
         android:id="@+id/txt_goods_add_goods_price"
@@ -68,12 +70,13 @@
         android:layout_marginLeft="10dp"
         android:layout_marginTop="5dp"
         android:layout_toRightOf="@id/txt_goods_add_goods_price"
-        android:gravity="center_vertical" />
+        android:gravity="center_vertical"
+        android:singleLine="true" />
 
     <TextView
         android:id="@+id/txt_goods_add_goods_kind"
         android:layout_width="100dp"
-        android:layout_height="65dp"
+        android:layout_height="50dp"
         android:layout_below="@id/txt_goods_add_goods_price"
         android:layout_marginTop="5dp"
         android:gravity="center_vertical"
@@ -83,36 +86,39 @@
     <EditText
         android:id="@+id/edt_goods_add_goods_kind"
         android:layout_width="wrap_content"
-        android:layout_height="65dp"
+        android:layout_height="50dp"
         android:layout_alignBottom="@id/txt_goods_add_goods_kind"
         android:layout_alignParentRight="true"
         android:layout_below="@id/edt_goods_add_goods_price"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="5dp"
         android:layout_toRightOf="@id/txt_goods_add_goods_kind"
-        android:gravity="center_vertical" />
+        android:gravity="center_vertical"
+        android:singleLine="true" />
 
     <TextView
         android:id="@+id/txt_goods_add_goods_brief_description"
         android:layout_width="100dp"
-        android:layout_height="65dp"
+        android:layout_height="50dp"
         android:layout_below="@id/txt_goods_add_goods_kind"
         android:layout_marginTop="5dp"
         android:gravity="center_vertical"
+        android:singleLine="true"
         android:text="@string/activity_goods_add_goods_brief_description"
         android:textSize="20dp" />
 
     <EditText
         android:id="@+id/edt_goods_add_goods_brief_description"
         android:layout_width="wrap_content"
-        android:layout_height="65dp"
+        android:layout_height="50dp"
         android:layout_alignBottom="@id/txt_goods_add_goods_brief_description"
         android:layout_alignParentRight="true"
         android:layout_below="@id/edt_goods_add_goods_kind"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="5dp"
         android:layout_toRightOf="@id/txt_goods_add_goods_brief_description"
-        android:gravity="start" />
+        android:gravity="center_vertical"
+        android:singleLine="true" />
 
     <TextView
         android:id="@+id/txt_goods_add_goods_description"
@@ -139,7 +145,7 @@
     <TextView
         android:id="@+id/txt_goods_add_goods_images"
         android:layout_width="100dp"
-        android:layout_height="95dp"
+        android:layout_height="120dp"
         android:layout_below="@id/txt_goods_add_goods_description"
         android:layout_marginTop="5dp"
         android:gravity="center_vertical"
@@ -149,10 +155,10 @@
     <Button
         android:id="@+id/btn_goods_add_add"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="45dp"
         android:layout_below="@id/txt_goods_add_goods_images"
-        android:layout_marginLeft="25dp"
-        android:layout_marginRight="25dp"
+        android:layout_marginLeft="45dp"
+        android:layout_marginRight="45dp"
         android:layout_marginTop="5dp"
         android:background="@android:color/holo_orange_dark"
         android:text="@string/activity_goods_add_add"
