--- a/app/src/main/res/layout/goods_details_activity.xml
+++ b/app/src/main/res/layout/goods_details_activity.xml
@@ -45,38 +45,43 @@
     <TextView
         android:id="@+id/txt_goods_details_goods_description"
         android:layout_width="match_parent"
-        android:layout_height="400dp"
+        android:layout_height="370dp"
         android:layout_below="@id/img_goods_details_goods_image"
         android:layout_marginTop="10dp"
         android:textSize="20dp" />
 
     <TextView
         android:id="@+id/txt_goods_details_amounts"
-        android:layout_width="100dp"
-        android:layout_height="35dp"
+        android:layout_width="80dp"
+        android:layout_height="45dp"
         android:layout_alignParentBottom="true"
         android:layout_below="@id/txt_goods_details_goods_description"
+        android:layout_marginBottom="10dp"
+        android:gravity="center|left"
         android:text="@string/activity_goods_details_goods_amounts"
         android:textSize="20dp" />
 
     <EditText
         android:id="@+id/edt_goods_details_goods_amounts"
         android:layout_width="100dp"
-        android:layout_height="35dp"
+        android:layout_height="45dp"
         android:layout_alignParentBottom="true"
         android:layout_below="@id/txt_goods_details_goods_description"
+        android:layout_marginBottom="10dp"
         android:layout_toRightOf="@id/txt_goods_details_amounts"
         android:gravity="center"
+        android:inputType="number"
+        android:singleLine="true"
         android:textSize="20dp" />
 
     <Button
         android:id="@+id/btn_goods_details_add_shopping_cart"
         android:layout_width="fill_parent"
-        android:layout_height="35dp"
+        android:layout_height="45dp"
         android:layout_alignParentBottom="true"
         android:layout_below="@id/txt_goods_details_goods_description"
-        android:layout_marginBottom="10dp"
-        android:layout_marginLeft="5dp"
+        android:layout_marginBottom="15dp"
+        android:layout_marginLeft="10dp"
         android:layout_toRightOf="@id/edt_goods_details_goods_amounts"
         android:background="@android:color/holo_orange_dark"
         android:text="@string/activity_goods_details_add_shopping_cart"
