--- a/app/src/main/res/layout/goods_management_listitem.xml
+++ b/app/src/main/res/layout/goods_management_listitem.xml
@@ -2,16 +2,16 @@
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="80dp"
-    android:orientation="horizontal"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="16dp">
+    android:layout_height="90dp"
+    android:layout_marginLeft="@dimen/activity_horizontal_margin"
+    android:layout_marginRight="@dimen/activity_horizontal_margin"
+    android:layout_marginTop="5dp"
+    android:orientation="horizontal">
 
     <ImageView
         android:id="@+id/img_goods_listitem_image"
         android:layout_width="80dp"
-        android:layout_height="80dp"
+        android:layout_height="90dp"
         android:layout_alignParentLeft="true"
         android:layout_marginRight="10dp"
         android:src="@drawable/goods" />
@@ -21,6 +21,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignTop="@id/img_goods_listitem_image"
+        android:layout_marginTop="5dp"
         android:layout_toRightOf="@id/img_goods_listitem_image"
         android:textSize="16dp"
         android:textStyle="bold" />
