--- a/app/src/main/res/layout/orders_search_activity.xml
+++ b/app/src/main/res/layout/orders_search_activity.xml
@@ -3,16 +3,16 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin">
 
     <include layout="@layout/search_titlebar"></include>
 
     <ListView
         android:id="@+id/lv_orders_search_orders"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
-        android:layout_marginTop="5dp"></ListView>
+        android:layout_height="match_parent"></ListView>
 
 </LinearLayout>
