--- a/app/src/main/res/layout/seller_management_activity.xml
+++ b/app/src/main/res/layout/seller_management_activity.xml
@@ -3,10 +3,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin">
+    android:layout_marginLeft="@dimen/activity_horizontal_margin"
+    android:layout_marginRight="@dimen/activity_horizontal_margin"
+    android:layout_marginTop="5dp"
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -39,9 +39,9 @@
     <Button
         android:id="@+id/add_seller_listitem_add_seller"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:layout_marginLeft="25dp"
-        android:layout_marginRight="25dp"
+        android:layout_height="45dp"
+        android:layout_marginLeft="45dp"
+        android:layout_marginRight="45dp"
         android:background="@android:color/holo_orange_dark"
         android:text="@string/activity_seller_management_add_seller"
         android:textSize="20dp" />
@@ -56,35 +56,35 @@
             android:layout_width="65dp"
             android:layout_height="30dp"
             android:layout_weight="1"
+            android:gravity="center"
             android:text="@string/activity_seller_management_listheader_sellerid"
-            android:textAlignment="center"
             android:textSize="25dp" />
 
         <TextView
             android:layout_width="65dp"
             android:layout_height="30dp"
+            android:layout_marginLeft="5dp"
             android:layout_weight="1"
-            android:paddingLeft="5dp"
+            android:gravity="center"
             android:text="@string/activity_seller_management_listheader_sellername"
-            android:textAlignment="center"
             android:textSize="25dp" />
 
         <TextView
             android:layout_width="65dp"
             android:layout_height="30dp"
+            android:layout_marginLeft="5dp"
             android:layout_weight="1"
-            android:paddingLeft="5dp"
+            android:gravity="center"
             android:text="@string/activity_seller_management_listheader_sellerpassword"
-            android:textAlignment="center"
             android:textSize="25dp" />
 
         <TextView
             android:layout_width="65dp"
             android:layout_height="30dp"
+            android:layout_marginLeft="5dp"
             android:layout_weight="1"
-            android:paddingLeft="5dp"
+            android:gravity="center"
             android:text="@string/activity_seller_management_listheader_sellerstatus"
-            android:textAlignment="center"
             android:textSize="25dp" />
     </LinearLayout>
 
