--- a/app/src/main/res/layout/shopping_cart_listitem.xml
+++ b/app/src/main/res/layout/shopping_cart_listitem.xml
@@ -2,20 +2,21 @@
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="80dp"
+    android:layout_height="86dp"
+    android:layout_marginLeft="@dimen/activity_horizontal_margin"
+    android:layout_marginRight="@dimen/activity_horizontal_margin"
+    android:layout_marginTop="5dp"
     android:descendantFocusability="blocksDescendants"
-    android:orientation="horizontal"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="16dp">
+    android:orientation="horizontal">
 
     <RadioButton
         android:id="@+id/radbtn_shopping_cart"
         android:layout_width="wrap_content"
-        android:layout_height="80dp"
+        android:layout_height="90dp"
         android:layout_alignParentLeft="true"
-        android:layout_marginBottom="5dp"
+        android:layout_marginBottom="3dp"
         android:layout_marginRight="5dp"
+        android:layout_marginTop="3dp"
         android:clickable="false"
         android:focusable="false"
         android:focusableInTouchMode="false" />
@@ -23,9 +24,10 @@
     <ImageView
         android:id="@+id/img_shopping_cart_goods_image"
         android:layout_width="80dp"
-        android:layout_height="80dp"
+        android:layout_height="90dp"
         android:layout_alignBottom="@id/radbtn_shopping_cart"
         android:layout_marginRight="10dp"
+        android:layout_marginTop="3dp"
         android:layout_toRightOf="@+id/radbtn_shopping_cart"
         android:src="@drawable/goods" />
 
@@ -34,6 +36,7 @@
         android:layout_width="fill_parent"
         android:layout_height="40dp"
         android:layout_alignTop="@id/img_shopping_cart_goods_image"
+        android:layout_marginTop="3dp"
         android:layout_toRightOf="@id/img_shopping_cart_goods_image"
         android:textSize="20dp"
         android:textStyle="bold" />
