--- a/app/src/main/res/layout/user_goods_activity.xml
+++ b/app/src/main/res/layout/user_goods_activity.xml
@@ -23,14 +23,15 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_weight="3"
-            android:gravity="center"
+            android:gravity="center|left"
             android:text="@string/activity_user_goods_goods_kind"
-            android:textSize="30dp" />
+            android:textSize="25dp" />
 
         <Spinner
             android:id="@+id/spinner_user_goods_kind"
             android:layout_width="match_parent"
             android:layout_height="50dp"
+            android:spinnerMode="dialog"
             android:layout_weight="1"></Spinner>
     </LinearLayout>
 
