--- a/app/src/main/res/layout/user_management_activity.xml
+++ b/app/src/main/res/layout/user_management_activity.xml
@@ -4,9 +4,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin">
+    android:layout_marginLeft="@dimen/activity_horizontal_margin"
+    android:layout_marginRight="@dimen/activity_horizontal_margin"
+    android:layout_marginTop="5dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -40,9 +40,9 @@
     <Button
         android:id="@+id/btn_user_listitem_add_user"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:layout_marginLeft="25dp"
-        android:layout_marginRight="25dp"
+        android:layout_height="45dp"
+        android:layout_marginLeft="45dp"
+        android:layout_marginRight="45dp"
         android:background="@android:color/holo_orange_dark"
         android:text="@string/activity_user_management_add_user"
         android:textSize="20dp" />
@@ -58,43 +58,43 @@
             android:layout_height="30dp"
             android:layout_weight="1"
             android:text="@string/activity_user_management_listheader_userid"
-            android:textAlignment="center"
+            android:gravity="center"
             android:textSize="25dp" />
 
         <TextView
             android:layout_width="90dp"
             android:layout_height="30dp"
             android:layout_weight="1"
-            android:paddingLeft="5dp"
+            android:layout_marginLeft="5dp"
             android:text="@string/activity_user_management_listheader_username"
-            android:textAlignment="center"
+            android:gravity="center"
             android:textSize="25dp" />
 
         <TextView
             android:layout_width="65dp"
             android:layout_height="30dp"
             android:layout_weight="1"
-            android:paddingLeft="5dp"
+            android:layout_marginLeft="5dp"
             android:text="@string/activity_user_management_listheader_userpassword"
-            android:textAlignment="center"
+            android:gravity="center"
             android:textSize="25dp" />
 
         <TextView
             android:layout_width="65dp"
             android:layout_height="30dp"
             android:layout_weight="1"
-            android:paddingLeft="5dp"
+            android:layout_marginLeft="5dp"
             android:text="@string/activity_user_management_listheader_isvip"
-            android:textAlignment="center"
+            android:gravity="center"
             android:textSize="25dp" />
 
         <TextView
             android:layout_width="65dp"
             android:layout_height="30dp"
             android:layout_weight="1"
-            android:paddingLeft="5dp"
+            android:layout_marginLeft="5dp"
             android:text="@string/activity_user_management_listheader_userstatus"
-            android:textAlignment="center"
+            android:gravity="center"
             android:textSize="25dp" />
     </LinearLayout>
 
