--- a/app/src/main/res/layout/user_my_activity.xml
+++ b/app/src/main/res/layout/user_my_activity.xml
@@ -5,8 +5,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin">
+    android:paddingRight="@dimen/activity_horizontal_margin">
 
     <Button
         android:id="@+id/btn_my_userinfo_modify"
