--- a/app/src/main/res/layout/users_listitem.xml
+++ b/app/src/main/res/layout/users_listitem.xml
@@ -3,17 +3,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="60dp"
-    android:orientation="horizontal"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="16dp">
+    android:orientation="horizontal">
 
     <TextView
         android:id="@+id/txt_users_listitem_userid"
         android:layout_width="65dp"
         android:layout_height="50dp"
         android:layout_weight="1"
-        android:textAlignment="center"
+        android:gravity="center"
         android:textSize="25dp" />
 
     <TextView
@@ -21,8 +18,8 @@
         android:layout_width="90dp"
         android:layout_height="50dp"
         android:layout_weight="1"
-        android:paddingLeft="5dp"
-        android:textAlignment="center"
+        android:layout_marginLeft="5dp"
+        android:gravity="center"
         android:textSize="25dp" />
 
     <TextView
@@ -30,8 +27,8 @@
         android:layout_width="65dp"
         android:layout_height="50dp"
         android:layout_weight="1"
-        android:paddingLeft="5dp"
-        android:textAlignment="center"
+        android:layout_marginLeft="5dp"
+        android:gravity="center"
         android:textSize="25dp" />
 
     <TextView
@@ -39,8 +36,8 @@
         android:layout_width="65dp"
         android:layout_height="50dp"
         android:layout_weight="1"
-        android:paddingLeft="5dp"
-        android:textAlignment="center"
+        android:layout_marginLeft="5dp"
+        android:gravity="center"
         android:textSize="25dp" />
 
 
@@ -49,8 +46,8 @@
         android:layout_width="65dp"
         android:layout_height="50dp"
         android:layout_weight="1"
-        android:paddingLeft="5dp"
-        android:textAlignment="center"
+        android:layout_marginLeft="5dp"
+        android:gravity="center"
         android:textSize="25dp" />
 
 </LinearLayout>
