--- a/app/src/main/res/layout/verify_password_dialog.xml
+++ b/app/src/main/res/layout/verify_password_dialog.xml
@@ -14,6 +14,7 @@
         android:ems="10"
         android:gravity="center"
         android:inputType="textPassword"
+        android:singleLine="true"
         android:textSize="25dp" />
 
 </LinearLayout>
